[tool.poetry]
name = "exploring-ml-problems-with-jupyter"
version = "0.1.0"
description = ""
authors = ["Markus Kaiser <markus@mrksr.de>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.9"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
pandas = "^1.2.2"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
